make breadcrumbs correct wrapped in small screen

--- a/src/stmaterial/assets/styles/components/_article-bottom.scss
+++ b/src/stmaterial/assets/styles/components/_article-bottom.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 0 5px;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .stm-article-bottom-right {
